<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Findie Rock</string>
    <string name="empty_list">No Events</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="unknown_location_detail">I was unable to figure out where you are located, which means I can\'t find any events near you!</string>
    <string name="loading">Loading Events. Please Wait…</string>
    <string name="loading_artist">Loading Artist Info. Please Wait…</string>
    <string name="loading_venue">Loading Venue Info. Please Wait…</string>
    <string name="performing_artists">Performing Artists:&#160;</string>
    <string name="eventinfo_aom_true">Age of Majority</string>
    <string name="eventinfo_aom_false">All Ages</string>
    <string name="band_artist">Artist :&#160;</string>
    <string name="band_bio">Click for Artist Biography</string>
    <string name="band_bio_detail">Artist Bio</string>
    <string name="ok">Ok</string>
    <string name="event_name">Event Name&#160;</string>
    <string name="event_start">Start :&#160;</string>
    <string name="artist_share_title">Share Artist :&#160;</string>
    <string name="artist_share_detail">I discovered artist %s using Findie Rock ( http://www.findierock.com )</string>
    <string name="map_venue">Venue   :&#160;</string>
    <string name="map_where">Address :&#160;</string>
    <string name="map_when">When    :&#160;</string>
    <string name="event_share_title">Share Event :&#160;</string>
    <string name="event_share_detail">I\'m attending %1$s on %2$s\r\n\r\n Found using Findie Rock ( http://www.findierock.com )</string>
    <string name="event_add_calendar">Add to Calendar</string>
    <string name="event_venue">Event Venue&#160;</string>
    <string name="more">More…</string>
    <string name="band_albums">Albums</string>
    <string name="band_events">Events</string>
    <string name="venue_upcoming">Upcoming Events</string>
    <string name="kilometre">&#160;KM</string>
    <string name="mile">&#160;MI</string>
    <string name="favourite_artists">Favourite Artists :</string>
    <string name="cancel">Cancel</string>
    <string name="favourite_delete">Are you sure you want to remove this artist from your favourites?</string>
    <string name="search_hint">Search Events, Artists, and Venues</string>
    <string name="search_results">Search Results :</string>
    <string name="search_events">Events</string>
    <string name="search_artists">Artists</string>
    <string name="search_venues">Venues</string>
    <string name="title_band_info">Band Info</string>
    <string name="title_events">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="title_venue">Venue Info</string>
    <string name="title_map">Event Map</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_search">Search Results</string>
    <string name="empty_list_favourites">No Favourites…</string>
    <string name="title_refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string-array name="prefUnits">
        <item>Miles (mi)</item>
        <item>Kilometres (km)</item>
    </string-array>
    <string-array name="prefUnitsValues">
        <item>true</item>
        <item>false</item>
    </string-array>
    <string name="about_text">Created by &lt;a href=&quot;http://www.zenwerx.com/&quot;&gt;Zenwerx&lt;/a&gt;, with data from the &lt;a href=&quot;http://www.findierock.com/&quot;&gt;Findie Rock&lt;/a&gt; website. Findie Rock uses data from Last.fm and MusicBrainz.&lt;br/&gt;&lt;br/&gt;If you want to see your events here, &lt;a href=&quot;http://www.findierock.com/Events/Add&quot;&gt;add them to FindieRock&lt;/a&gt;!</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="detail">Detail</string>
    <string name="favourite">Favourite</string>
    <string name="share">Share</string>
    <string name="album_share_detail">I just discovered %1$s by %2$s!\r\n\r\n Found using Findie Rock ( http://www.findierock.com )</string>
    <string name="album_share_title">Share Album : </string>
    <string name="album_name">Album Name</string>
    <string name="tracks">Tracks</string>
    <string name="artist">Artist</string>
    <string name="title_album_info">Album Info</string>
    <string name="ageofmajority">AgeOfMajority</string>
    <string name="event_date">Event Date</string>
    <string name="_100km">100km</string>
    <string name="feb_5_2012_9_00_pm">Feb 5 2012 9:00 PM</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="event_detail">Event Detail</string>
    <string name="super_awesome_event">Super Awesome Event</string>
    <string name="venue_info">Venue Info</string>
</resources>
