<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@color/bg_color_dev">
    <include layout="@layout/findieheader" android:id="@+id/findieHeader"  android:layout_width="fill_parent" android:layout_height="wrap_content"/>
    <include layout="@layout/findiefooter" android:id="@+id/findieFooter"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true"/>
	<LinearLayout android:orientation="vertical" android:id="@+id/linearLayout1" android:layout_height="fill_parent" android:layout_width="fill_parent" 
		android:layout_below="@+id/findieHeader" android:layout_above="@+id/findieFooter" android:layout_alignParentLeft="true">
	    <TextView android:text="@string/event_name" android:id="@+id/eventinfo_name" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	    <TextView android:text="@string/event_date" android:id="@+id/eventinfo_date" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	    <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="fill_parent">
	    	<TextView android:text="@string/event_venue" android:id="@+id/eventinfo_venue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="onVenueClick" android:clickable="true"></TextView>
	    </LinearLayout>
	    <TextView android:text="@string/ageofmajority" android:id="@+id/eventinfo_aom" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	    <ListView android:cacheColorHint="@color/bg_color_dev" android:layout_height="fill_parent" android:id="@+id/eventinfo_artists" android:layout_width="fill_parent"></ListView>
	</LinearLayout>
</RelativeLayout>
